[project]
name = "tank"
version = "0.1.0"
description = ""
authors = [
    {name = "kingpoem",email = "1322153392@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pymunk (>=6.1.0,<7.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
autoflake = "^2.3.1"
isort = "^6.0.1"

[tool.poetry]
packages = [{ include = "tank", from = "src" }]

[tool.poetry.scripts]
tank = "tank.__main__:main"
autoflake-clean = "scripts.autoflake_wrapper:main"

[tool.isort]
profile = "black"
lines_between_types = 1
